--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,20 @@
 name: CI
 
 on:
-  name: CI
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
 
-  on:
-    pull_request:
-      branches: [ main ]
-    push:
-      branches: [ main ]
-
-  jobs:
-    test:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        echo: "ok"
+
+      - name: Sanity
+        run: echo "ok"
 
       - name: Install dependencies
         run: |
